--- a/browserInfo copy.html
+++ b/browserInfo copy.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="result.css">
-    <title>Leaks</title>
+    <title>Browser Info</title>
 </head>
 <body>
     <h1><strong>Browser Info</strong></h1>
