--- a/homePage.html
+++ b/homePage.html
@@ -1,22 +1,51 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<!-- Imporation of the css styles -->
+	<link rel="stylesheet" href="navbar1.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
+
+	<!-- Name of the Tab -->
 	<title>Home Page</title>
+
+	<!-- Setting backgrouund -->
+	<h2 style="background-image: url('home1.jpg');">
 </head>
+<nav>
+	<!-- Creation of a nav bar -->
+    <ul>
+		<!-- Nav bar elements -->
+        <li><a href="homePage.html">Home</a></li>
+        <li><a href="https://github.com/TTVTheCats/SecurityTesting">Open Source</a></li>
+        <li><a href="xssTesting.html">XSS testing</a></li>
+        <li><a href="https://github.com/TTVTheCats/SecurityTesting/issues">Bugs?</a></li>
+
+		<!-- Hamburger icon and it's proprietes -->
+		<svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
+			<path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
+		  </svg>
+    </ul>
+</nav>
 <body>
 	<!-- header section -->
+	<br> <!-- br add space where it's placed -->
 	<header>
+		<!-- Title -->
 		<p><h1>Vulnerability</h1></p>
 	</header>
-	
-	<!-- main content section -->
+
+	<main>
+		<!-- Description -->
+		<h3>Questo sito permette di scoprire tutte le vulnerabilità presenti nel browser</h3>
+	</main>
+
+	<!-- Testing buttons -->
 	<main>
 		<a href="browserInfo.html" class="button">Browser Info</a>
   		<a href="browserLeaks.html" class="button">Browser Leaks</a>
 	</main>
 	
-	<!-- footer section -->
+	<!-- End of the page -->
 	<footer>
 		<p>&copy; 2024 Vulnerability</p>
 	</footer>
