--- a/homePage.html
+++ b/homePage.html
@@ -8,22 +8,21 @@
 	<!-- Name of the Tab -->
 	<title>Home Page</title>
 
-	<!-- Setting backgrouund -->
-	<h2 style="background-image: url('home1.jpg');">
 </head>
 <nav>
 	<!-- Creation of a nav bar -->
     <ul>
 		<!-- Nav bar elements -->
         <li><a href="homePage.html">Home</a></li>
-        <li><a href="https://github.com/TTVTheCats/SecurityTesting">Open Source</a></li>
+        <li><a href="https://github.com/TTVTheCats/SecurityTesting" target="_blank" rel="noopener noreferrer">Open Source</a></li> <!-- target="_blank" = Apre in un'altra finestra - rel="noopener noreferrer" = Impedisce l'invio dell'header Referer alla nuova pagina, migliorando la privacy. -->
         <li><a href="xssTesting.html">XSS testing</a></li>
-        <li><a href="https://github.com/TTVTheCats/SecurityTesting/issues">Bugs?</a></li>
+        <li><a href="https://github.com/TTVTheCats/SecurityTesting/issues" target="_blank" rel="noopener noreferrer">Bugs?</a></li>
 
-		<!-- Hamburger icon and it's proprietes -->
+		<!-- Hamburger icon and it's proprietes 
 		<svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
 			<path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
 		  </svg>
+		  -->
     </ul>
 </nav>
 <body>
@@ -44,10 +43,10 @@
 		<a href="browserInfo.html" class="button">Browser Info</a>
   		<a href="browserLeaks.html" class="button">Browser Leaks</a>
 	</main>
-	
 	<!-- End of the page -->
-	<footer>
-		<p>&copy; 2024 Vulnerability</p>
-	</footer>
+<footer >
+	<p>Copyright &copy; 2024 CodeNest - <a href="PrivacyPolicy.html" >Privacy Policy</a></p> 
+</footer>
+	
 </body>
 </html>
