Fixed two buttons

--- a/homePage.html
+++ b/homePage.html
@@ -6,34 +6,27 @@
             <ul>
                 <li><p1>GITHUB</p1></li>
                 <li><p1>SETTINGS</p1></li>
-                <li><img class="mainIcon" src="PatchPulseLogo.svg" alt="CentredLogo"/></li>
+                <li><pi><img class="mainIcon" src="PatchPulseLogo.svg" alt="CentredLogo"/></pi></li>
                 <li><p1>OTHERS</p1></li>
                 <li><p1>OTHERS</p1></li>
             </ul>
         </nav>
     </head>
-    <br><br><br><br>
+<br><br><br><br>
     <body>
         <!-- Aggiungi il contenitore per Flexbox -->
         <div class="container">
             <img class="WaveLeft" src="Waves.svg" alt="LateralWaves"/>
-            <h1>PATCHPULSE YOU WILL <br>FEEL SAFE NOW</h1>
-                <a href="browserInfo.html" class="button"><h1 class ="info">Browser Info</h1></a>
-                <a href="browserLeaks.html" class="button"><h1 class ="leaks">Browser Leaks</h1></a>
+                <table>
+                    <tr>
+                        <td><h1>PATCHPULSE, YOU WILL <br>FEEL SAFE NOW</h1></td>
+                    </tr>
+                    <tr>
+                        <td><a href="browserInfo.html" class="button">Browser Info</a><a href="browserLeaks.html" class="button">Browser Leaks</a></td>
+                    </tr>
+                </table>
+            
             <img class="WaveRight" src="Waves.svg" alt="LateralWaves"/>
         </div>
-
-        <main>
-            <!-- Nuovo contenitore per i pulsanti -->
-        <div class="main-buttons">
-            <a href="browserInfo.html" class="button">Browser Info</a>
-            <a href="browserLeaks.html" class="button">Browser Leaks</a>
-        </div>
-
-           <!-- 
-            <a href="browserLeaks.html" class="button">Browser Leaks</a>
-            <a href="browserInfo.html" class="button">Browser Info</a>
-            -->
-        </main>
     </body>
 </html>
