--- a/homePage.html
+++ b/homePage.html
@@ -1,3 +1,8 @@
+<!--Bootstrap loader-->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T38787s12n6K637VBK1b0ChJ4//Q3ozm7560LPohrQAKxf8s7V+uioV7nqZzC10" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C8fC4ZtX677x376yN1DKzuV6302/e4A/8f3s5X6/c6w7271w/7/vX/v9jX2c" crossorigin="anonymous"></script>
+<!--End Bootstrap loader-->
+
 <!DOCTYPE html>
 <html>
     <link rel="stylesheet" type="text/css" href="homePage.css">
@@ -20,13 +25,18 @@
                 <table>
                     <tr>
                         <td><h1>PATCHPULSE, YOU WILL <br>FEEL SAFE NOW</h1></td>
-                    </tr>
+                    </tr> 
                     <tr>
-                        <td><a href="browserInfo.html" class="button">Browser Info</a><a href="browserLeaks.html" class="button">Browser Leaks</a></td>
+                        <td>
+                            <div class="button-container">
+                                <a href="browserInfo.html" class="button">Browser Info</a>
+                                <a href="browserLeaks.html" class="button">Browser Leaks</a>
+                            </div>
+                        </td>
                     </tr>
                 </table>
             
-            <img class="WaveRight" src="Waves.svg" alt="LateralWaves"/>
+            <img class="WaveRight" src="Waves.svg" alt="LateralWaves" />
         </div>
     </body>
 </html>
