Organized Files, added first php file, added new font Roboto, new html page SignUp, base for TermsAndConditions GPLv3, improved css

--- a/html/homePage.html
+++ b/html/homePage.html
@@ -1,19 +1,25 @@
-<!--Bootstrap loader-->
+<!--Bootstrap loader--------------------------------->
+
+<!-- Latest compiled and minified CSS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T38787s12n6K637VBK1b0ChJ4//Q3ozm7560LPohrQAKxf8s7V+uioV7nqZzC10" crossorigin="anonymous">
+
+<!-- Latest compiled JavaScript -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C8fC4ZtX677x376yN1DKzuV6302/e4A/8f3s5X6/c6w7271w/7/vX/v9jX2c" crossorigin="anonymous"></script>
-<!--End Bootstrap loader-->
+
+<!--End Bootstrap loader----------------------------->
+
 
 <!DOCTYPE html>
 <html>
-    <link rel="stylesheet" type="text/css" href="homePage.css">
+    <link rel="stylesheet" type="text/css" href="homePage.css"> 
     <head>
         <nav>
             <ul>
                 <li><p1>GITHUB</p1></li>
                 <li><p1>SETTINGS</p1></li>
-                <li><pi><img class="mainIcon" src="PatchPulseLogo.svg" alt="CentredLogo"/></pi></li>
+                <li><pi><img class="mainIcon" src="../svgs/PatchPulseLogo.svg" alt="CentredLogo"/></pi></li>
                 <li><p1>OTHERS</p1></li>
-                <li><p1>OTHERS</p1></li>
+                <li><p1>LOGIN</p1></li>
             </ul>
         </nav>
     </head>
@@ -21,7 +27,7 @@
     <body>
         <!-- Aggiungi il contenitore per Flexbox -->
         <div class="container">
-            <img class="WaveLeft" src="Waves.svg" alt="LateralWaves"/>
+            <img class="WaveLeft" src="../svgs/Waves.svg" alt="LateralWaves"/>
                 <table>
                     <tr>
                         <td><h1>PATCHPULSE, YOU WILL <br>FEEL SAFE NOW</h1></td>
@@ -36,7 +42,7 @@
                     </tr>
                 </table>
             
-            <img class="WaveRight" src="Waves.svg" alt="LateralWaves" />
+            <img class="WaveRight" src="../svgs/Waves.svg" alt="LateralWaves" />
         </div>
     </body>
 </html>
