changed a few words and added some href

--- a/html/loginPage.html
+++ b/html/loginPage.html
@@ -5,11 +5,11 @@
     <head>
         <nav>
             <ul>
-                <li><p1>GITHUB</p1></li>
-                <li><p1>SETTINGS</p1></li>
-                <li><pi><img class="mainIcon" src="../svgs/PatchPulseLogo.svg" alt="CentredLogo"/></pi></li>
-                <li><p1>OTHERS</p1></li>
-                <li><p1>LOGIN</p1></li>
+                <a href = "https://github.com/TTVTheCats/PatchPulse/tree/main" ><li><p1>GITHUB</p1></li></a>
+                <a href = "" ><li><p1>SETTINGS</p1></li></a>
+                <a href = "homePage.html" ><li><pi><img class="mainIcon" src="../svgs/PatchPulseLogo.svg" alt="CentredLogo"/></pi></li></a>
+                <a href = "" ><li><p1>OTHERS</p1></li></a>
+                <a href = "loginPage.html" ><li><p1>LOGIN</p1></li></a>
             </ul>
         </nav>
     </head>
