--- a/html/homePage.html
+++ b/html/homePage.html
@@ -15,11 +15,11 @@
     <head>
         <nav>
             <ul>
-                <li><p1>GITHUB</p1></li>
-                <li><p1>SETTINGS</p1></li>
-                <li><pi><img class="mainIcon" src="../svgs/PatchPulseLogo.svg" alt="CentredLogo"/></pi></li>
-                <li><p1>OTHERS</p1></li>
-                <li><p1>LOGIN</p1></li>
+                <a href = "https://github.com/TTVTheCats/PatchPulse/tree/main" ><li><p1>GITHUB</p1></li></a>
+                <a href = "" ><li><p1>SETTINGS</p1></li></a>
+                <a href = "" ><li><pi><img class="mainIcon" src="../svgs/PatchPulseLogo.svg" alt="CentredLogo"/></pi></li></a>
+                <a href = "" ><li><p1>OTHERS</p1></li></a>
+                <a href = "loginPage.html" ><li><p1>LOGIN</p1></li></a>
             </ul>
         </nav>
     </head>
@@ -35,8 +35,8 @@
                     <tr>
                         <td>
                             <div class="button-container">
-                                <a href="browserInfo.html" class="button">Browser Info</a>
-                                <a href="browserLeaks.html" class="button">Browser Leaks</a>
+                                <a href="browserInfo.html" class="button">Fast Scan</a>
+                                <a href="browserLeaks.html" class="button">Slow Scan</a>
                             </div>
                         </td>
                     </tr>
