Added register & fastScan pages. Improved Design

--- a/html/homePage.html
+++ b/html/homePage.html
@@ -14,13 +14,15 @@
     <link rel="stylesheet" type="text/css" href="homePage.css"> 
     <head>
         <nav>
-            <ul>
-                <a href = "https://github.com/TTVTheCats/PatchPulse/tree/main" ><li><p1>GITHUB</p1></li></a>
-                <a href = "" ><li><p1>SETTINGS</p1></li></a>
-                <a href = "" ><li><pi><img class="mainIcon" src="../svgs/PatchPulseLogo.svg" alt="CentredLogo"/></pi></li></a>
-                <a href = "" ><li><p1>OTHERS</p1></li></a>
-                <a href = "loginPage.html" ><li><p1>LOGIN</p1></li></a>
-            </ul>
+            <div class="nav-container">
+                <ul>
+                    <li class="nav-item"><a href="https://github.com/TTVTheCats/PatchPulse/tree/main">GITHUB</a></li>
+                    <li class="nav-item"><a href="#">SETTINGS</a></li>
+                    <li class="logo-container"><img class="mainIcon" src="../svgs/PatchPulseLogo.svg" alt="CentredLogo"></li>
+                    <li class="nav-item"><a href="homePage.html">HOME</a></li>
+                    <li class="nav-item"><a href="loginPage.html">LOGIN</a></li>
+                </ul>
+            </div>
         </nav>
     </head>
 <br><br><br><br>
@@ -35,7 +37,7 @@
                     <tr>
                         <td>
                             <div class="button-container">
-                                <a href="browserInfo.html" class="button">Fast Scan</a>
+                                <a href="fastScan.html" class="button">Fast Scan</a>
                                 <a href="browserLeaks.html" class="button">Slow Scan</a>
                             </div>
                         </td>
