Added register.php (experimental) and finalized LICENCE and TermAndConditions

--- a/html/loginPage.html
+++ b/html/loginPage.html
@@ -26,17 +26,11 @@
 
             <h1>Login</h1>
 
-            <form action="../dataBase/save_user.php" method="post">
-
-                <input type="text" name="NameOfUser" id="" placeholder="name" required class="form1"><br />
+            <form action="../dataBase/login_user.php" method="post">
 
                 <input type="email" name="EmailOfUser" id="" placeholder="email" required class="form1"><br />
 
                 <input type="password" name="PasswordOfUserUnCrypt" id="" placeholder="password" required class="form1"><br />
-
-                <p2>I've read the and agree with the <a href="TermsAndConditions/GPLv3.html" class="hyperLinks">Terms & Conditions </a> </p2>
-
-                <input type="checkbox" name="AgreeTerms" id="" required><br />
 
                 <input type="submit" name="" id="" value="Sign Up" class="form1">
                 
