--- a/homePage.html
+++ b/homePage.html
@@ -8,5 +8,26 @@
             <li class="flex-item">OTHERS</li>
             <li class="flex-item">OTHERS</li>
         </ul>
+        
+        <br><br><br><br>
+
+        <!-- Aggiungi il contenitore per Flexbox -->
+        <div class="container">
+            <img class="WaveLeft" src="../svgs/Waves.svg" alt="LateralWaves"/>
+            <table>
+                <tr>
+                    <td><h1>PATCHPULSE, YOU WILL <br>FEEL SAFE NOW</h1></td>
+                </tr>
+                <tr>
+                    <td>
+                        <div class="button-container">
+                            <a href="fastScan.php" class="button">Fast Scan</a>
+                            <a href="" class="button">Slow Scan</a>
+                        </div>
+                    </td>
+                </tr>
+            </table>
+            <img class="WaveRight" src="../svgs/Waves.svg" alt="LateralWaves" />
+        </div>
 
 </body>
