New HTML + CSS code

--- a/homePage.html
+++ b/homePage.html
@@ -11,23 +11,25 @@
         
         <br><br><br><br>
 
-        <!-- Aggiungi il contenitore per Flexbox -->
-        <div class="container">
-            <img class="WaveLeft" src="../svgs/Waves.svg" alt="LateralWaves"/>
-            <table>
-                <tr>
-                    <td><h1>PATCHPULSE, YOU WILL <br>FEEL SAFE NOW</h1></td>
-                </tr>
-                <tr>
-                    <td>
-                        <div class="button-container">
-                            <a href="fastScan.php" class="button">Fast Scan</a>
-                            <a href="" class="button">Slow Scan</a>
-                        </div>
-                    </td>
-                </tr>
-            </table>
-            <img class="WaveRight" src="../svgs/Waves.svg" alt="LateralWaves" />
+        <!-- Aggiungi il contenitore per Flexbox2 -->
+        <div class="flex2-container">
+            <img class="flex2-item" src="Waves.svg" alt="LateralWaves"/>
+            <div class="flex2-item">
+                <table>
+                    <tr>
+                        <td><h1>PATCHPULSE, YOU WILL <br>FEEL SAFE NOW</h1></td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <div class="">
+                                <a href="fastScan.php" class="">Fast Scan</a>
+                                <a href="" class="">Slow Scan</a>
+                            </div>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+            <img class="flex2-item" src="Waves.svg" alt="LateralWaves" />
         </div>
 
 </body>
