Improved dynamic HTML+CSS

--- a/homePage.html
+++ b/homePage.html
@@ -14,14 +14,14 @@
         <!-- Aggiungi il contenitore per Flexbox2 -->
         <div class="flex2-container">
             <img class="flex2-item" src="Waves.svg" alt="LateralWaves"/>
-            <div class="flex2-item">
+            <div class="flex2-itemGrow">
                 <table>
                     <tr>
                         <td><h1>PATCHPULSE, YOU WILL <br>FEEL SAFE NOW</h1></td>
                     </tr>
                     <tr>
                         <td>
-                            <div class="">
+                            <div class="flex2-container" >
                                 <a href="fastScan.php" class="">Fast Scan</a>
                                 <a href="" class="">Slow Scan</a>
                             </div>
