--- a/homePage.html
+++ b/homePage.html
@@ -1,4 +1,4 @@
-<body>
+<body color="black">
     
     <link rel="stylesheet" type="text/css" href="style.css">
         <ul class="flex-container">
@@ -13,7 +13,7 @@
 
         <!-- Aggiungi il contenitore per Flexbox2 -->
         <div class="flex2-container">
-            <img class="flex2-item" src="Waves.svg" alt="LateralWaves"/>
+            <img class="flex2-item vwImmageSizeble" src="Waves.svg" alt="LateralWaves"/>
             <div class="flex2-itemGrow">
                 <table>
                     <tr>
@@ -29,7 +29,7 @@
                     </tr>
                 </table>
             </div>
-            <img class="flex2-item" src="Waves.svg" alt="LateralWaves" />
+            <img class="flex2-item vwImmageSizeble" src="Waves.svg" alt="LateralWaves" />
         </div>
 
 </body>
