--- a/homePage.html
+++ b/homePage.html
@@ -1,12 +1,11 @@
-<body color="black">
-    
+<body>
     <link rel="stylesheet" type="text/css" href="style.css">
         <ul class="flex-container">
-            <li class="flex-item">GITHUB</li>
-            <li class="flex-item">SETTINGS</li>
+            <li class="flex-item"><a href="https://github.com/TTVTheCats/PatchPulse/tree/main" target="blank">GITHUB</a></li>
+            <li class="flex-item"><a href="">SETTINGS</a></li>
             <li class="flex-item"><img class="mainIcon" src="PatchPulseLogo.svg" alt="CentredLogo"></li>
-            <li class="flex-item">OTHERS</li>
-            <li class="flex-item">OTHERS</li>
+            <li class="flex-item"><a href="homePage.html">HOME</a></li>
+            <li class="flex-item"><a href="loginPage.html">LOGIN</a></li>
         </ul>
         
         <br><br><br><br>
@@ -15,21 +14,20 @@
         <div class="flex2-container">
             <img class="flex2-item vwImmageSizeble" src="Waves.svg" alt="LateralWaves"/>
             <div class="flex2-itemGrow">
-                <table>
-                    <tr>
-                        <td><h1>PATCHPULSE, YOU WILL <br>FEEL SAFE NOW</h1></td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <div class="flex2-container" >
-                                <a href="fastScan.php" class="">Fast Scan</a>
-                                <a href="" class="">Slow Scan</a>
-                            </div>
-                        </td>
-                    </tr>
-                </table>
+                <h1>PATCHPULSE, YOU WILL <br>FEEL SAFE NOW</h1>
+                <div class="button-container">
+                    <a href="fastScan.php" class="button1">Fast Scan</a>
+                    <a href="" class="button1">Slow Scan</a>
+                </div>
             </div>
             <img class="flex2-item vwImmageSizeble" src="Waves.svg" alt="LateralWaves" />
         </div>
-
+        <br><br>
+        <ul class="flex-container footr" >
+            <li class="flex-item footer-item"><a class="footer-item" target="blank">ABOUT US US</a></li>
+            <li class="flex-item footer-item"><a class="footer-item" href="" target="blank">FOUND A BUG</a></li>
+            <li class="flex-item footer-item"><a class="footer-item" href="" target="blank">PRIVACY</a></li>
+            <li class="flex-item footer-item"><a class="footer-item" href="" target="blank">TERMS OF USE</a></li>
+            <li class="flex-item footer-item"><a class="footer-item" href="" target="blank">YOUR DATA</a></li>
+        </ul>
 </body>
