Fixed logo not centred

--- a/homePage.html
+++ b/homePage.html
@@ -4,8 +4,8 @@
             <li class="flex-item"><a href="https://github.com/TTVTheCats/PatchPulse/tree/main" target="blank">GITHUB</a></li>
             <li class="flex-item"><a href="">SETTINGS</a></li>
             <li class="flex-item"><img class="mainIcon" src="PatchPulseLogo.svg" alt="CentredLogo"></li>
-            <li class="flex-item"><a href="homePage.html">HOME</a></li>
-            <li class="flex-item"><a href="loginPage.html">LOGIN</a></li>
+            <li class="flex-item"><a href="homePage.html">HOME‎ ‎ ‎ ‎ ‎ ‎ </a></li>
+            <li class="flex-item"><a href="loginPage.html">LOGIN‎ ‎ ‎ ‎ ‎ ‎ </a></li>
         </ul>
         
         <br><br><br><br>
