Finished v.2 of the dynamic webiste

--- a/homePage.html
+++ b/homePage.html
@@ -24,7 +24,7 @@
         </div>
         <br><br>
         <ul class="flex-container footr" >
-            <li class="flex-item footer-item"><a class="footer-item" target="blank">ABOUT US US</a></li>
+            <li class="flex-item footer-item"><a class="footer-item" target="blank">ABOUT US</a></li>
             <li class="flex-item footer-item"><a class="footer-item" href="" target="blank">FOUND A BUG</a></li>
             <li class="flex-item footer-item"><a class="footer-item" href="" target="blank">PRIVACY</a></li>
             <li class="flex-item footer-item"><a class="footer-item" href="" target="blank">TERMS OF USE</a></li>
