--- a/loginPage.html
+++ b/loginPage.html
@@ -4,8 +4,8 @@
         <li class="flex-item"><a href="https://github.com/TTVTheCats/PatchPulse/tree/main" target="blank">GITHUB</a></li>
         <li class="flex-item"><a href="">SETTINGS</a></li>
         <li class="flex-item"><img class="mainIcon" src="PatchPulseLogo.svg" alt="CentredLogo"></li>
-        <li class="flex-item"><a href="homePage.html">HOME</a></li>
-        <li class="flex-item"><a href="loginPage.html">LOGIN</a></li>
+        <li class="flex-item"><a href="homePage.html">HOME &nbsp; &nbsp; &nbsp;</a></li>
+        <li class="flex-item"><a href="loginPage.html">LOGIN &nbsp; &nbsp; &nbsp; </a></li>
     </ul>
 
     <br><br><br><br>
@@ -27,6 +27,11 @@
             <a href="registerPage.html" class="signIn">Don't have an account</a>
         </p>
     </div>
+
+    <div class="qr-container">
+        <img src="qr-code.svg" alt="QR Code" class="qr-code">
+    </div>
+
     <br><br>
     <ul class="flex-container footr" >
         <li class="flex-item footer-item"><a class="footer-item" target="blank">ABOUT US US</a></li>
@@ -37,3 +42,5 @@
     </ul>
 
 </body>
+
+
