Finished v.1 of the dynamic branch

--- a/homePage.html
+++ b/homePage.html
@@ -16,7 +16,7 @@
             <div class="flex2-itemGrow">
                 <h1>PATCHPULSE, YOU WILL <br>FEEL SAFE NOW</h1>
                 <div class="button-container">
-                    <a href="fastScan.php" class="button1">Fast Scan</a>
+                    <a href="fastScan.html" class="button1">Fast Scan</a>
                     <a href="" class="button1">Slow Scan</a>
                 </div>
             </div>
