--- a/fastScan.html
+++ b/fastScan.html
@@ -954,6 +954,14 @@ function checkBatteryStatusFallback() {
         checkHtmlCssSupport();
 
     </script>
-    -->
+    
+    <br><br>
+    <ul class="flex-container footr" >
+        <li class="flex-item footer-item"><a class="footer-item" target="blank">ABOUT US</a></li>
+        <li class="flex-item footer-item"><a class="footer-item" href="" target="blank">FOUND A BUG</a></li>
+        <li class="flex-item footer-item"><a class="footer-item" href="" target="blank">PRIVACY</a></li>
+        <li class="flex-item footer-item"><a class="footer-item" href="" target="blank">TERMS OF USE</a></li>
+        <li class="flex-item footer-item"><a class="footer-item" href="" target="blank">YOUR DATA</a></li>
+    </ul>
 </body>
 </html>
